# var-v2-frontend

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  Dockerfile  ICON_USAGE.md  README.md  README.zh.md  REPORT_FEATURE_README.md  REPORT_USAGE_GUIDE.md  SUMMARY.md  eslint.config.mjs  nginx.conf  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: app.vue
app/components/: MetricsChart.vue  MultiMetricsChart.vue  ReportCharts.vue  ReportGenerator.vue  ReportPreview.vue  VideoPlayer.vue
app/composables/: useApi.ts  useDesktopBridge.ts  useDesktopState.ts  useReportGenerator.ts  useTaskApi.ts  useTauriEvents.ts  useWebSocket.ts
scripts/: build-desktop-worker.mjs  build-gpu-sidecars.mjs  build-windows-runtime-package.mjs  export-onnx-model.mjs  macos-release.mjs  pe-deps.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: placeholder.txt
src-tauri/resources/runtime/windows-x64/: runtime-package-lock.json
src-tauri/src/: lib.rs  logging.rs  main.rs  media_server.rs  settings.rs  state.rs
src-tauri/src/commands/: app.rs  library.rs  mod.rs  report.rs  runtime.rs  scheduler.rs  tasks.rs
src-tauri/src/db/: mod.rs  result_repo.rs  schema.rs  task_repo.rs
src-tauri/src/domain/: app.rs  media.rs  mod.rs  task.rs  worker.rs
src-tauri/src/services/: media_library.rs  mod.rs  resources.rs  runtime_manager.rs  scheduler.rs  task_import.rs  video_probe.rs  worker_events.rs  worker_runner.rs
(+5 files in other folders)
