[package]
name = "var-desktop"
version = "0.1.6"
description = "VAR 熔池视频分析桌面端"
authors = ["YANGYANG HOU"]
edition = "2024"

[lib]
name = "var_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
parking_lot = "0.12.3"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sysinfo = "0.33.1"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.2.0"
tauri-plugin-single-instance = "2.4.1"
tokio = { version = "1.44.1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
zip = "2.4.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
